--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-aiohttp==3.7.4
+aiohttp>=3.7.4
 async-timeout==3.0.1
 attrs==19.3.0
 chardet==3.0.4
 discord==1.0.1
-discord.py==1.3.4
+discord.py==1.6.0
 idna==2.10
 multidict==4.7.6
+typing-extensions==3.7.4.3
 websockets==8.1
 yarl==1.4.2
